--- a/client/src/css/Home.css
+++ b/client/src/css/Home.css
@@ -65,6 +65,12 @@ body.home-bg {
     padding-bottom: 8px;
 }
 
+@media (max-width: 576px) {
+    .home-page .search-input {
+        font-size: 1em;
+    }
+}
+
 .search-input:focus {
     outline: none;
     box-shadow: 0 5px 15px 2px rgba(0, 0, 0, 0.3), 0 0 8px 2px rgba(113, 44, 249, 0.6);
