--- a/client/src/css/User.css
+++ b/client/src/css/User.css
@@ -1,8 +1,3 @@
-.page-container {
-    overflow: hidden;
-    height: 91vh;
-}
-
 .profile-picture-wrapper {
     border-radius: 50%;
     width: 100px;
@@ -54,9 +49,9 @@
         overflow: hidden;
     }
 
-    .page-container {
+    /* .page-container {
         overflow: auto;
-    }
+    } */
 }
 
 .invalid-tooltip {
@@ -90,6 +85,10 @@
 }
 
 @media (min-width: 768px) {
+    .page-container {
+        overflow: hidden;
+        height: 91vh;
+    }
 
     .list-wrapper {
     position: relative;
